--- a/index.html
+++ b/index.html
@@ -1,115 +1,205 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
-	<link rel="stylesheet" href="style.css">
-	
-	<title>Document</title>
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+		integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
+	<link rel="stylesheet" href="pastaPrincipal/css/style.css">
+
+	<title>Studio 283</title>
+	<LINK REL="SHORTCUT ICON" href="../aulaDeFront/pastaPrincipal/imagens/studio 283.jpg">
 </head>
+
 <body>
-	<nav class="navbar navbar-expand-lg navbar-light bg-dark">
-		<a class="navbar-brand" href="#">Studio283</a>
-		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#conteudoNavbarSuportado" aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
-		  <span class="navbar-toggler-icon"></span>
-		</button>
-	  
-		<div class="collapse navbar-collapse" id="conteudoNavbarSuportado">
-		  <ul class="navbar-nav mr-auto">
-			<li class="nav-item active">
-			  <a class="nav-link font" href="#"> Home <span class="sr-only">(página atual)</span></a>
-			</li>
-			<!--menu da nav , com o dropdown-->
-			<li class="nav-item dropdown">
-			  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-				Fine Line
-			  </a>
-			  <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-				<a class="dropdown-item" href="#">Colorido</a>
-				<a class="dropdown-item" href="#">Preto e cinza</a>
-				<a class="dropdown-item" href="#">Sombreado</a>
-				<div class="dropdown-divider"></div>
-				<a class="dropdown-item" href="#">Flash Day</a>
-			  </div>
-			</li>
-			<li class="nav-item dropdown">
-				<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-				  Realismo
-				</a>
-				<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-					<a class="dropdown-item" href="#">Colorido</a>
-					<a class="dropdown-item" href="#">Preto e cinza</a>
-					<a class="dropdown-item" href="#">Sombreado</a>
-					<div class="dropdown-divider"></div>
-					<a class="dropdown-item" href="#">Flash Day</a>
-				  </div>
-			  </li>
-			  <li class="nav-item dropdown">
-				<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-				  Frase
-				</a>
-				<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-					<a class="dropdown-item" href="#">Colorido</a>
-					<a class="dropdown-item" href="#">Preto e cinza</a>
-					<a class="dropdown-item" href="#">Sombreado</a>
-					<div class="dropdown-divider"></div>
-					<a class="dropdown-item" href="#">Flash Day</a>
-				  </div>
-			  </li>
-			
-		  </ul>
-		  <form class="form-inline my-2 my-lg-0">
-			<input class="form-control mr-sm-2" type="search" placeholder="Pesquisar" aria-label="Pesquisar">
-			<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Pesquisar</button>
-		  </form>
+	<nav class="navbar navbar-expand-lg navbar-light bg-eu">
+		<div class="logo mr-3">
+			<img class="imagemLogo" src="../aulaDeFront/pastaPrincipal/imagens/studio 283.jpg" alt="Logo do Studio 283">
 		</div>
-	  </nav>
-	  <div class="carousel-item">
-  <img src="ft1.jpg" alt="...">
-  <div class="carousel-caption d-none d-md-block">
-    <h5>foto da tattoo</h5>
-    <p>a foto</p>
-  </div>
-</div>
-<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-	<ol class="carousel-indicators">
-	  <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-	  <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-	  <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-	</ol>
-	<div class="carousel-inner">
-	  <div class="carousel-item active">
-		<img class="d-block w-100" src=".../800x400?auto=yes&bg=777&fg=555&text=Primeiro Slide" alt="Primeiro Slide">
-	  </div>
-	  <div class="carousel-item">
-		<img class="d-block w-100" src=".../800x400?auto=yes&bg=666&fg=444&text=Segundo Slide" alt="Segundo Slide">
-	  </div>
-	  <div class="carousel-item">
-		<img class="d-block w-100" src=".../800x400?auto=yes&bg=555&fg=333&text=Terceiro Slide" alt="Terceiro Slide">
-	  </div>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#conteudoNavbarSuportado"
+			aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+
+		<div class="collapse navbar-collapse" id="conteudoNavbarSuportado">
+			<ul class="navbar-nav mr-auto">
+				<li class="nav-item active">
+					<a class="nav-link font text-white" href="index.html"> Home <span class="sr-only">(página
+							atual)</span></a>
+				</li>
+				<li class="nav-item active">
+					<a class="nav-link font text-white" href="../aulaDeFront/pastaPrincipal/html/formulario.html">
+						Formulário <span class="sr-only">(página atual)</span></a>
+				</li>
+				<!--menu da nav , com o dropdown-->
+				<li class="nav-item dropdown">
+					<a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button"
+						data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Fine Line </a>
+					<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+						<a class="dropdown-item" href="#">Colorido</a>
+						<a class="dropdown-item" href="#">Preto e cinza</a>
+						<a class="dropdown-item" href="#">Sombreado</a>
+						<div class="dropdown-divider"></div>
+						<a class="dropdown-item" href="#"> Flash Day </a>
+					</div>
+				</li>
+				<li class="nav-item dropdown">
+					<a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button"
+						data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Realismo </a>
+					<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+						<a class="dropdown-item" href="#">Colorido</a>
+						<a class="dropdown-item" href="#">Preto e cinza</a>
+						<a class="dropdown-item" href="#">Sombreado</a>
+						<div class="dropdown-divider"></div>
+						<a class="dropdown-item" href="#">Flash Day</a>
+					</div>
+				</li>
+				<li class="nav-item dropdown">
+					<a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button"
+						data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Frase </a>
+					<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+						<a class="dropdown-item" href="#">Colorido</a>
+						<a class="dropdown-item" href="#">Preto e cinza</a>
+						<a class="dropdown-item" href="#">Sombreado</a>
+						<div class="dropdown-divider"></div>
+						<a class="dropdown-item" href="#">Flash Day</a>
+					</div>
+				</li>
+
+			</ul>
+			<form class="form-inline my-2 my-lg-0 ">
+				<input class="form-control mr-sm-2 " type="search" placeholder="Pesquisar" aria-label="Pesquisar">
+				<button class="btn btn-outline-dark my-2 my-sm-0 text-white" type="submit">Pesquisar</button>
+			</form>
+		</div>
+	</nav>
+
+	<div id="carouselExampleIndicators" class="carousel slide mt-3" data-ride="carousel">
+		<ol class="carousel-indicators">
+			<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+			<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+			<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+			<li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+			<li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+			<li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+			<li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
+			<li data-target="#carouselExampleIndicators" data-slide-to="7"></li>
+		</ol>
+		<div class="carousel-inner">
+			<div class="carousel-item active">
+				<img class="d-block w-100" src="../aulaDeFront/pastaPrincipal/imagens/imagem1.jpg" alt="Primeiro Slide">
+			</div>
+			<div class="carousel-item">
+				<img class="d-block w-100" src="../aulaDeFront/pastaPrincipal/imagens/imagem2.jpg" alt="Segundo Slide">
+			</div>
+			<div class="carousel-item">
+				<img class="d-block w-100" src="../aulaDeFront/pastaPrincipal/imagens/imagem3.jpg" alt="Terceiro Slide">
+			</div>
+			<div class="carousel-item">
+				<img class="d-block w-100" src="../aulaDeFront/pastaPrincipal/imagens/imagem4.jpg" alt="Quarto Slide">
+			</div>
+			<div class="carousel-item">
+				<img class="d-block w-100" src="../aulaDeFront/pastaPrincipal/imagens/imagem5.jpg" alt="Quinto Slide">
+			</div>
+			<div class="carousel-item">
+				<img class="d-block w-100" src="../aulaDeFront/pastaPrincipal/imagens/imagem6.jpg" alt="Sexto Slide">
+			</div>
+			<div class="carousel-item">
+				<img class="d-block w-100" src="../aulaDeFront/pastaPrincipal/imagens/imagem7.jpg" alt="Setimo Slide">
+			</div>
+			<div class="carousel-item">
+				<img class="d-block w-100" src="../aulaDeFront/pastaPrincipal/imagens/imagem8.jpg" alt="Oitavo Slide">
+			</div>
+
+		</div>
+		<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+			<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+			<span class="sr-only">Anterior</span>
+		</a>
+		<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+			<span class="carousel-control-next-icon" aria-hidden="true"></span>
+			<span class="sr-only">Próximo</span>
+		</a>
 	</div>
-	<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-	  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-	  <span class="sr-only">Anterior</span>
-	</a>
-	<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-	  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-	  <span class="sr-only">Próximo</span>
-	</a>
-  </div>
-<div class="carousel-item">
-	<img src="ft2.jpg" alt="...">
-	<div class="carousel-caption d-none d-md-block">
-	  <h5>seunda foto da tattoo</h5>
-	  <p>ft2</p>
+	<!--<div class="carousel-item">
+		<img src="ft2.jpg" alt="...">
+		<div class="carousel-caption d-none d-md-block">
+			<h5>segunda foto da tattoo</h5>
+			<p>ft2</p>
+		</div>
+	</div>-->
 	</div>
-  </div>
-	  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+	<selection class="container">
+		<div class="card mt-3 card1" style="width: 18rem;">
+			<img src="../aulaDeFront/pastaPrincipal/imagens/imagem1.jpg" class="card-img-top" alt="...">
+			<div class="card-body">
+				<h5 class="card-title">Realist lion</h5>
+				<p class="card-text">Desenho de semi-realista.Leão com sombreado nas juba
+
+				</p>
+				<p>
+					Artista responsável pelo trabalho: <em> Moniink(Monique Ramos paiva)</em>
+				</p>
+				<a href="#" class="btn btn-dark">Ver</a>
+			</div>
+		</div>
+		<div class="card mt-3 card2" style="width: 18rem;">
+			<img src="../aulaDeFront/pastaPrincipal/imagens/imagem5.jpg" class="card-img-top" alt="...">
+			<div class="card-body">
+				<h5 class="card-title">Shaded floral</h5>
+				<p class="card-text">Floral sombreado, com detalhes realistas e folhas em full black</p>
+				<p>
+					Artista responsável pelo trabalho: <em> Moniink(Monique Ramos paiva)</em>
+				</p>
+				<a href="#" class="btn btn-dark">Ver</a>
+			</div>
+		</div>
+		<div class="card mt-3 card3" style="width: 18rem;">
+			<img src="../aulaDeFront/pastaPrincipal/imagens/imagem2.jpg" class="card-img-top" alt="...">
+			<div class="card-body">
+				<h5 class="card-title">Butterfly in fine line</h5>
+				<p class="card-text">Desenho semi-realista de borboleta ,com sombreado e pequenos detalhes em full black
+				</p>
+				<p>
+					Artista responsável pelo trabalho: <em> Juan Santos</em>
+				</p>
+				<a href="#" class="btn btn-dark">Ver</a>
+			</div>
+		</div>
+		<div class="card mt-3 card4" style="width: 18rem;">
+			<img src="../aulaDeFront/pastaPrincipal/imagens/imagem3.jpg" class="card-img-top" alt="...">
+			<div class="card-body">
+				<h5 class="card-title">Rose trident</h5>
+				<p class="card-text">Desenho de uma rosa e um tridente em fusão, com folhas sombreadas em rastelo</p>
+				<p>
+					Artista responsável pelo trabalho: <em> Juan Santos</em>
+				</p>
+				<a href="#" class="btn btn-dark">Ver</a>
+			</div>
+		</div>
+	</selection>
+
+	<div class="footer">
+		<footer>
+			<div class="footer-copyright text-center py-3">© 2019 Copyright:
+				<a href="../../index.html"> Studio283Tattoo</a>
+			</div>
+		</footer>
+	</div>
+
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+		crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+		integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+		crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+		integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+		crossorigin="anonymous"></script>
 </body>
+
 </html>
